--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@clerk/nextjs": "^6.36.10",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.47.0",
-    "postgres": "^3.4.5",
     "@tanstack/react-query": "^5.90.20",
     "@trpc/client": "^11.8.1",
     "@trpc/react-query": "^11.8.1",
@@ -31,9 +30,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "openai": "^6.16.0",
+    "postgres": "^3.4.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
