--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,15 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.development
+.env.production
+.env*.local
+# Allow example files to be committed
+!.env.example
+!.env.production.example
 
 # vercel
 .vercel
